server/src/AST/LuauGrammar/LuauParser.ts
// Generated from ./server/src/grammar/LuauParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { LuauParserListener } from "./LuauParserListener";
import { LuauParserVisitor } from "./LuauParserVisitor";


export class LuauParser extends Parser {
	public static readonly STRING = 1;
	public static readonly LUA_STRING = 2;
	public static readonly DOUBLE_QUOTES_STRING = 3;
	public static readonly SINGLE_QUOTES_STRING = 4;
	public static readonly MULTI_LINE_STRING = 5;
	public static readonly INTERPOLATED_STRING = 6;
	public static readonly NUMBER = 7;
	public static readonly INT = 8;
	public static readonly FLOAT_1 = 9;
	public static readonly FLOAT_2 = 10;
	public static readonly FLOAT_3 = 11;
	public static readonly FLOAT = 12;
	public static readonly SCIENTIFIC_NOTATION = 13;
	public static readonly HEX_NUMBER = 14;
	public static readonly BINARY_NUMBER = 15;
	public static readonly OCTAL_NUMBER = 16;
	public static readonly NIL = 17;
	public static readonly FALSE = 18;
	public static readonly TRUE = 19;
	public static readonly RETURN = 20;
	public static readonly END = 21;
	public static readonly BREAK = 22;
	public static readonly IF = 23;
	public static readonly ELSEIF = 24;
	public static readonly THEN = 25;
	public static readonly ELSE = 26;
	public static readonly WHILE = 27;
	public static readonly DO = 28;
	public static readonly FOR = 29;
	public static readonly IN = 30;
	public static readonly REPEAT = 31;
	public static readonly UNTIL = 32;
	public static readonly LOCAL = 33;
	public static readonly FUNCTION = 34;
	public static readonly NAME = 35;
	public static readonly TYPE = 36;
	public static readonly TYPEOF = 37;
	public static readonly EXPORT = 38;
	public static readonly EscapeSequence = 39;
	public static readonly NormalEscape = 40;
	public static readonly HexadecimalEscape = 41;
	public static readonly UnicodeEscape = 42;
	public static readonly SpaceEscape = 43;
	public static readonly OctalEscape = 44;
	public static readonly MULTI_LINE_COMMENT = 45;
	public static readonly SINGLE_LINE_COMMENT = 46;
	public static readonly WS = 47;
	public static readonly NEWLINE = 48;
	public static readonly SEMI_COLON = 49;
	public static readonly COLON = 50;
	public static readonly DOUBLE_COLON = 51;
	public static readonly EQUAL = 52;
	public static readonly DOT = 53;
	public static readonly COMMA = 54;
	public static readonly OPEN_PARENTHESIS = 55;
	public static readonly CLOSE_PARENTHESIS = 56;
	public static readonly OPEN_ANGLE_BRACKET = 57;
	public static readonly CLOSE_ANGLE_BRACKET = 58;
	public static readonly OPEN_SQUARE_BRACKETS = 59;
	public static readonly CLOSE_SQUARE_BRACKETS = 60;
	public static readonly OPEN_CURLY_BRACKETS = 61;
	public static readonly CLOSE_CURLY_BRACKETS = 62;
	public static readonly ARROW = 63;
	public static readonly INTERSECTION = 64;
	public static readonly UNION = 65;
	public static readonly OPTIONAL = 66;
	public static readonly VARIADIC_EXPRESSION = 67;
	public static readonly CompoundOperations = 68;
	public static readonly NegativeSign = 69;
	public static readonly UnaryOperations = 70;
	public static readonly BinaryOperations = 71;
	public static readonly RULE_file = 0;
	public static readonly RULE_chunk = 1;
	public static readonly RULE_block = 2;
	public static readonly RULE_statement = 3;
	public static readonly RULE_lastStatement = 4;
	public static readonly RULE_setExpression = 5;
	public static readonly RULE_compoundSetExpression = 6;
	public static readonly RULE_doBlock = 7;
	public static readonly RULE_whileExpression = 8;
	public static readonly RULE_repeatBlock = 9;
	public static readonly RULE_ifStatement = 10;
	public static readonly RULE_forExpression = 11;
	public static readonly RULE_forInExpression = 12;
	public static readonly RULE_globalFunction = 13;
	public static readonly RULE_localFunction = 14;
	public static readonly RULE_variableDeclaration = 15;
	public static readonly RULE_typeDeclaration = 16;
	public static readonly RULE_funcname = 17;
	public static readonly RULE_varList1 = 18;
	public static readonly RULE_nameList = 19;
	public static readonly RULE_typedNameList = 20;
	public static readonly RULE_mixedNamesList = 21;
	public static readonly RULE_allNamesList = 22;
	public static readonly RULE_allNamesListType = 23;
	public static readonly RULE_expressionList1 = 24;
	public static readonly RULE_expressionList2 = 25;
	public static readonly RULE_expressionList = 26;
	public static readonly RULE_expression1 = 27;
	public static readonly RULE_expression2 = 28;
	public static readonly RULE_expression = 29;
	public static readonly RULE_var = 30;
	public static readonly RULE_prefixexp = 31;
	public static readonly RULE_globalIteratorFunction = 32;
	public static readonly RULE_functioncall = 33;
	public static readonly RULE_varOrExp = 34;
	public static readonly RULE_nameAndArgs = 35;
	public static readonly RULE_varSuffix = 36;
	public static readonly RULE_args = 37;
	public static readonly RULE_function = 38;
	public static readonly RULE_funcbody = 39;
	public static readonly RULE_functionParameters = 40;
	public static readonly RULE_functionParametersType = 41;
	public static readonly RULE_functionReturns = 42;
	public static readonly RULE_parameterList = 43;
	public static readonly RULE_parameterListType = 44;
	public static readonly RULE_returnList = 45;
	public static readonly RULE_variadicParameter = 46;
	public static readonly RULE_variadicParameterType = 47;
	public static readonly RULE_variadicReturn = 48;
	public static readonly RULE_tableconstructor = 49;
	public static readonly RULE_fieldList = 50;
	public static readonly RULE_field = 51;
	public static readonly RULE_fieldsep = 52;
	public static readonly RULE_simpleType = 53;
	public static readonly RULE_singletonType = 54;
	public static readonly RULE_unionSuffix = 55;
	public static readonly RULE_intersectionSuffix = 56;
	public static readonly RULE_type = 57;
	public static readonly RULE_genericTypePackParameter = 58;
	public static readonly RULE_genericTypeList = 59;
	public static readonly RULE_genericTypePackParameterWithDefault = 60;
	public static readonly RULE_genericTypeListWithDefaults = 61;
	public static readonly RULE_typeList = 62;
	public static readonly RULE_typeParams = 63;
	public static readonly RULE_typePack = 64;
	public static readonly RULE_genericTypePack = 65;
	public static readonly RULE_variadicTypePack = 66;
	public static readonly RULE_functionType = 67;
	public static readonly RULE_tableIndexer = 68;
	public static readonly RULE_tableProperty = 69;
	public static readonly RULE_tablePropOrIndexer = 70;
	public static readonly RULE_propList = 71;
	public static readonly RULE_tableType = 72;
	public static readonly RULE_typedName = 73;
	public static readonly RULE_optionalTypedName = 74;
	public static readonly RULE_comment = 75;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file", "chunk", "block", "statement", "lastStatement", "setExpression", 
		"compoundSetExpression", "doBlock", "whileExpression", "repeatBlock", 
		"ifStatement", "forExpression", "forInExpression", "globalFunction", "localFunction", 
		"variableDeclaration", "typeDeclaration", "funcname", "varList1", "nameList", 
		"typedNameList", "mixedNamesList", "allNamesList", "allNamesListType", 
		"expressionList1", "expressionList2", "expressionList", "expression1", 
		"expression2", "expression", "var", "prefixexp", "globalIteratorFunction", 
		"functioncall", "varOrExp", "nameAndArgs", "varSuffix", "args", "function", 
		"funcbody", "functionParameters", "functionParametersType", "functionReturns", 
		"parameterList", "parameterListType", "returnList", "variadicParameter", 
		"variadicParameterType", "variadicReturn", "tableconstructor", "fieldList", 
		"field", "fieldsep", "simpleType", "singletonType", "unionSuffix", "intersectionSuffix", 
		"type", "genericTypePackParameter", "genericTypeList", "genericTypePackParameterWithDefault", 
		"genericTypeListWithDefaults", "typeList", "typeParams", "typePack", "genericTypePack", 
		"variadicTypePack", "functionType", "tableIndexer", "tableProperty", "tablePropOrIndexer", 
		"propList", "tableType", "typedName", "optionalTypedName", "comment",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "'--'", undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "'['", "']'", undefined, undefined, undefined, 
		undefined, undefined, undefined, "'...'", undefined, "'-'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "STRING", "LUA_STRING", "DOUBLE_QUOTES_STRING", "SINGLE_QUOTES_STRING", 
		"MULTI_LINE_STRING", "INTERPOLATED_STRING", "NUMBER", "INT", "FLOAT_1", 
		"FLOAT_2", "FLOAT_3", "FLOAT", "SCIENTIFIC_NOTATION", "HEX_NUMBER", "BINARY_NUMBER", 
		"OCTAL_NUMBER", "NIL", "FALSE", "TRUE", "RETURN", "END", "BREAK", "IF", 
		"ELSEIF", "THEN", "ELSE", "WHILE", "DO", "FOR", "IN", "REPEAT", "UNTIL", 
		"LOCAL", "FUNCTION", "NAME", "TYPE", "TYPEOF", "EXPORT", "EscapeSequence", 
		"NormalEscape", "HexadecimalEscape", "UnicodeEscape", "SpaceEscape", "OctalEscape", 
		"MULTI_LINE_COMMENT", "SINGLE_LINE_COMMENT", "WS", "NEWLINE", "SEMI_COLON", 
		"COLON", "DOUBLE_COLON", "EQUAL", "DOT", "COMMA", "OPEN_PARENTHESIS", 
		"CLOSE_PARENTHESIS", "OPEN_ANGLE_BRACKET", "CLOSE_ANGLE_BRACKET", "OPEN_SQUARE_BRACKETS", 
		"CLOSE_SQUARE_BRACKETS", "OPEN_CURLY_BRACKETS", "CLOSE_CURLY_BRACKETS", 
		"ARROW", "INTERSECTION", "UNION", "OPTIONAL", "VARIADIC_EXPRESSION", "CompoundOperations", 
		"NegativeSign", "UnaryOperations", "BinaryOperations",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(LuauParser._LITERAL_NAMES, LuauParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return LuauParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "LuauParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return LuauParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return LuauParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(LuauParser._ATN, this);
	}
	// @RuleVersion(0)
	public file(): FileContext {
		let _localctx: FileContext = new FileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, LuauParser.RULE_file);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 152;
			this.chunk();
			this.state = 153;
			this.match(LuauParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public chunk(): ChunkContext {
		let _localctx: ChunkContext = new ChunkContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, LuauParser.RULE_chunk);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 161;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LuauParser.IF) | (1 << LuauParser.WHILE) | (1 << LuauParser.DO) | (1 << LuauParser.FOR) | (1 << LuauParser.REPEAT))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (LuauParser.LOCAL - 33)) | (1 << (LuauParser.FUNCTION - 33)) | (1 << (LuauParser.NAME - 33)) | (1 << (LuauParser.TYPE - 33)) | (1 << (LuauParser.EXPORT - 33)) | (1 << (LuauParser.MULTI_LINE_COMMENT - 33)) | (1 << (LuauParser.SINGLE_LINE_COMMENT - 33)) | (1 << (LuauParser.OPEN_PARENTHESIS - 33)))) !== 0)) {
				{
				{
				this.state = 155;
				this.statement();
				this.state = 157;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === LuauParser.SEMI_COLON) {
					{
					this.state = 156;
					this.match(LuauParser.SEMI_COLON);
					}
				}

				}
				}
				this.state = 163;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 168;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LuauParser.RETURN || _la === LuauParser.BREAK) {
				{
				this.state = 164;
				this.lastStatement();
				this.state = 166;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === LuauParser.SEMI_COLON) {
					{
					this.state = 165;
					this.match(LuauParser.SEMI_COLON);
					}
				}

				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, LuauParser.RULE_block);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 170;
			this.chunk();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, LuauParser.RULE_statement);
		try {
			this.state = 186;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 172;
				this.setExpression();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 173;
				this.compoundSetExpression();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 174;
				this.functioncall();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 175;
				this.doBlock();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 176;
				this.whileExpression();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 177;
				this.repeatBlock();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 178;
				this.ifStatement();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 179;
				this.forExpression();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 180;
				this.forInExpression();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 181;
				this.globalFunction();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 182;
				this.localFunction();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 183;
				this.variableDeclaration();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 184;
				this.typeDeclaration();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 185;
				this.comment();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lastStatement(): LastStatementContext {
		let _localctx: LastStatementContext = new LastStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, LuauParser.RULE_lastStatement);
		let _la: number;
		try {
			this.state = 193;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case LuauParser.RETURN:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 188;
				this.match(LuauParser.RETURN);
				this.state = 190;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LuauParser.STRING) | (1 << LuauParser.NUMBER) | (1 << LuauParser.NIL) | (1 << LuauParser.FALSE) | (1 << LuauParser.TRUE))) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (LuauParser.FUNCTION - 34)) | (1 << (LuauParser.NAME - 34)) | (1 << (LuauParser.OPEN_PARENTHESIS - 34)) | (1 << (LuauParser.OPEN_CURLY_BRACKETS - 34)))) !== 0) || ((((_la - 67)) & ~0x1F) === 0 && ((1 << (_la - 67)) & ((1 << (LuauParser.VARIADIC_EXPRESSION - 67)) | (1 << (LuauParser.NegativeSign - 67)) | (1 << (LuauParser.UnaryOperations - 67)))) !== 0)) {
					{
					this.state = 189;
					this.expressionList();
					}
				}

				}
				break;
			case LuauParser.BREAK:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 192;
				this.match(LuauParser.BREAK);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public setExpression(): SetExpressionContext {
		let _localctx: SetExpressionContext = new SetExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, LuauParser.RULE_setExpression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 195;
			this.varList1();
			this.state = 196;
			this.match(LuauParser.EQUAL);
			this.state = 197;
			this.expressionList1();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public compoundSetExpression(): CompoundSetExpressionContext {
		let _localctx: CompoundSetExpressionContext = new CompoundSetExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, LuauParser.RULE_compoundSetExpression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 199;
			this.var();
			this.state = 200;
			this.match(LuauParser.CompoundOperations);
			this.state = 201;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public doBlock(): DoBlockContext {
		let _localctx: DoBlockContext = new DoBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, LuauParser.RULE_doBlock);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 203;
			this.match(LuauParser.DO);
			this.state = 204;
			this.block();
			this.state = 205;
			this.match(LuauParser.END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileExpression(): WhileExpressionContext {
		let _localctx: WhileExpressionContext = new WhileExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, LuauParser.RULE_whileExpression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 207;
			this.match(LuauParser.WHILE);
			this.state = 208;
			this.expression();
			this.state = 209;
			this.doBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public repeatBlock(): RepeatBlockContext {
		let _localctx: RepeatBlockContext = new RepeatBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, LuauParser.RULE_repeatBlock);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 211;
			this.match(LuauParser.REPEAT);
			this.state = 212;
			this.block();
			this.state = 213;
			this.match(LuauParser.UNTIL);
			this.state = 214;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let _localctx: IfStatementContext = new IfStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, LuauParser.RULE_ifStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 216;
			this.match(LuauParser.IF);
			this.state = 217;
			this.expression();
			this.state = 218;
			this.match(LuauParser.THEN);
			this.state = 219;
			this.block();
			this.state = 227;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LuauParser.ELSEIF) {
				{
				{
				this.state = 220;
				this.match(LuauParser.ELSEIF);
				this.state = 221;
				this.expression();
				this.state = 222;
				this.match(LuauParser.THEN);
				this.state = 223;
				this.block();
				}
				}
				this.state = 229;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 232;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LuauParser.ELSE) {
				{
				this.state = 230;
				this.match(LuauParser.ELSE);
				this.state = 231;
				this.block();
				}
			}

			this.state = 234;
			this.match(LuauParser.END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forExpression(): ForExpressionContext {
		let _localctx: ForExpressionContext = new ForExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, LuauParser.RULE_forExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 236;
			this.match(LuauParser.FOR);
			this.state = 237;
			this.optionalTypedName();
			this.state = 238;
			this.match(LuauParser.EQUAL);
			this.state = 239;
			this.expression();
			this.state = 240;
			this.match(LuauParser.COMMA);
			this.state = 241;
			this.expression();
			this.state = 244;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LuauParser.COMMA) {
				{
				this.state = 242;
				this.match(LuauParser.COMMA);
				this.state = 243;
				this.expression();
				}
			}
